# white-soapstone

./: .gitignore  pyproject.toml
docs/: ARCHITECTURE.md  OAUTH_SETUP.md
scripts/: build_executable.ps1
src/white_soapstone/: cli.py  cli_main.py  gui_main.py
src/white_soapstone/cache/: db.py
src/white_soapstone/cache/migrations/: 001_init.sql
src/white_soapstone/config/: paths.py  store.py
src/white_soapstone/drive/: auth.py  client.py  download.py  upload.py
src/white_soapstone/manifest/: builder.py  reader.py  writer.py
src/white_soapstone/rekordbox/: errors.py  extractor.py
src/white_soapstone/schema/: manifest.schema.json
src/white_soapstone/sync/: gc_service.py  pull_service.py  sync_service.py
src/white_soapstone/transcode/: ffmpeg.py
src/white_soapstone/ui/: app_window.py
src/white_soapstone/web/: server.py
src/white_soapstone/web/static/: app.js  index.html  style.css
tests/: test_auth.py  test_cache.py  test_extractor.py  test_manifest.py
