[project]
name = "white-soapstone"
version = "0.1.0"
description = "Cross-platform Rekordbox library sharing app (read playlists, publish preview audio + metadata to a shared Google Drive folder, browse and preview peers' libraries)"
readme = "README.md"
authors = [
    { name = "Sinjihn Smith", email = "sinjihnsmith@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyrekordbox>=0.4.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "keyring>=25.5",
    "psutil>=6.1",
    "pystray>=0.19",
    "pywebview>=5.3",
    "pydantic>=2.9",
    "imageio-ffmpeg>=0.5",
    "jsonschema>=4.23",
    "platformdirs>=4.3",
    "click>=8.1",
    "Pillow>=11.0",
    "pygobject<3.52 ; sys_platform == 'linux'",
    "pycairo>=1.29.0 ; sys_platform == 'linux'",
    "keyrings-alt>=5.0.2 ; sys_platform == 'linux'",
]

[project.scripts]
white-soapstone = "white_soapstone.cli:app"
white-soapstone-app = "white_soapstone.gui_main:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.11",
    "pytest>=8.3",
]
